--- a/src/content/docs/guides/custom-solutions.mdx
+++ b/src/content/docs/guides/custom-solutions.mdx
@@ -2,8 +2,8 @@
 title: RMA Center UNV in dubai
 description: Lovosis Technology is proud to be the official UNV camera partner in the UAE.
 sidebar:
-  label: Custom Solutions
-  order: 4
+  label: RMA Center
+  order: 1
 ---
 
 import { Card } from "@astrojs/starlight/components";
