--- a/src/content/docs/guides/first-project-checklist.mdx
+++ b/src/content/docs/guides/first-project-checklist.mdx
@@ -1,10 +1,11 @@
 ---
-title: First Project Checklist
-description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services. 
+title: UNV RMA center in Dubai
+description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services.
 sidebar:
   label: First Project Checklist
-  order: 3
+  order: 4
 ---
+
 import {
   Card,
   CardGrid,
@@ -25,41 +26,49 @@ Embarking on a new project can be exciting and challenging in equal measure. Wit
     - Define clear objectives and success criteria for project completion
   </Card>
   <Card title="Tools and Equipment">
-    - Make a list of all required ScrewFast tools and equipment
-    - Verify inventory availability and condition before starting
+    - Make a list of all required ScrewFast tools and equipment - Verify
+    inventory availability and condition before starting
   </Card>
   <Card title="Arranging Services">
-    - If additional expertise or manpower is needed, arrange for ScrewFast construction services in advance
-    - Clarify service level agreements and timelines with your ScrewFast representative
+    - If additional expertise or manpower is needed, arrange for ScrewFast
+    construction services in advance - Clarify service level agreements and
+    timelines with your ScrewFast representative
   </Card>
 </CardGrid>
 
-## Project Execution
-### Initial Phase
-<Steps>
-1. Set up the project site according to ScrewFast setup guidelines
-
-2. Conduct an initial team meeting to align on project goals and ScrewFast methodologies
-
-3. Establish project checkpoints and milestones for regular assessment
-</Steps>
-
-
 ## Additional Resources
+
 <CardGrid>
-<LinkCard
-  title="Detailed Guides"
-  description="Access in-depth documentation and user manuals for ScrewFast tools and services."
-  href="/guides/getting-started"
-/>
-<LinkCard
-  title="Support Contacts"
-  description="Keep handy the contact details for ScrewFast support, available for assistance throughout your project."
-  href="/guides/getting-started"
-/>
-<LinkCard
-  title="Advanced Learning"
-  description="Explore further educational resources provided by ScrewFast to refine your skills and knowledge base."
-  href="/guides/getting-started"
-/>
+  <LinkCard
+    title="Detailed Guides"
+    description="Access in-depth documentation and user manuals for ScrewFast tools and services."
+    href="/guides/getting-started"
+  />
+  <LinkCard
+    title="Support Contacts"
+    description="Keep handy the contact details for ScrewFast support, available for assistance throughout your project."
+    href="/guides/getting-started"
+  />
+  <LinkCard
+    title="Advanced Learning"
+    description="Explore further educational resources provided by ScrewFast to refine your skills and knowledge base."
+    href="/guides/getting-started"
+  />
+</CardGrid>
+<CardGrid>
+<iframe
+  src="https://www.youtube.com/embed/kBO0pTVQ3nQ?si=VMR5tvxdFfOjdrut"
+  width="560"
+  height="560"
+  frameborder="0"
+  allowfullscreen
+></iframe>
+
+<iframe
+  src="https://www.youtube.com/embed/kBO0pTVQ3nQ?si=VMR5tvxdFfOjdrut"
+  width="560"
+  height="560"
+  frameborder="0"
+  allowfullscreen
+></iframe>
 </CardGrid>
