--- a/src/content/docs/guides/getting-started.mdx
+++ b/src/content/docs/guides/getting-started.mdx
@@ -1,9 +1,9 @@
 ---
-title: Getting Started
-description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services. 
+title: Product Password reset
+description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services.
 sidebar:
-  label: Getting Started
-  order: 1
+  label: Password Reset
+  order: 2
 ---
 
 import {
@@ -16,66 +16,29 @@ import {
   TabItem,
 } from "@astrojs/starlight/components";
 
-Welcome to ScrewFast Docs! We're excited to help you get started with our premium tools. This guide is designed to introduce you to our tool range, help you understand the basics, and get you up to speed for your first project. Let's jump right into the world of high-quality, reliable craftsmanship with ScrewFast.
+Welcome to the Uniview Overseas Video Surveillance Product Login Password Recovery Request Submission Page.
 
-## Tools Overview
+This page is designated for the secure submission of requests to reset login passwords for Uniview's international video surveillance products. Please ensure all required information is accurately provided to facilitate a smooth and efficient recovery process.
+
+## Product Password Reset
 
 <CardGrid>
-  <Card title="ScrewDriver Set" icon="seti:config">
-    Versatile and ergonomic, suitable for all screw types.
-    <LinkCard title="Learn More " href="/guides/getting-started" />
+  <Card title="Bulk Password reset" icon="seti:config">
+    No service available in Cuba, Iran, North Korea, Syria, Russia, and Sudan.
+    <LinkCard
+      title="Click here "
+      href="https://www.uniview.com/Support/Product_Password_Reset/Bulk_Password_Reset/"
+    />
   </Card>
-  <Card title="Hammer Drill" icon="seti:pipeline">
-    Powerful performance for drilling and impact driving.
-    <LinkCard title="Learn More " href="/guides/getting-started" />
-  </Card>
-  <Card title="Power Saws" icon="seti:crystal">
-    Precision cutting with adjustable settings for various materials.
-    <LinkCard title="Learn More " href="/guides/getting-started" />
+  <Card title="Check Status" icon="seti:pipeline">
+    Check approval status here.
+    <LinkCard
+      title="Click Here "
+      href="https://www.uniview.com/Support/Product_Password_Reset/Check_Approval_Status/"
+    />
   </Card>
 </CardGrid>
 
-## Setup Instructions
+## Contact Us
 
-<Steps>
-
-1. Unboxing Icon Unbox Your ScrewFast Tools
-   Carefully open the packaging and verify all components are present. Familiarize yourself with the tool and any accessories.
-
-2. Safety Check Icon Initial Setup and Safety Checks
-   Read the safety manual before handling the tool. Check the tool for any shipping damage and ensure safety guards are in place.
-
-3. Calibration Icon Calibration and Preparation for First Use
-   Follow the manufacturer's instructions to calibrate your tools as required. Ensure batteries are charged or electrical connections are secure.
-
-</Steps>
-
-
-## Cleaning and Maintenance
-
-<Aside type="tip">
-  Always unplug tools before cleaning. Use a soft, dry cloth to wipe the
-  exterior and store in a dry place.
-</Aside>
-
-Regular maintenance ensures longevity and safety. Clean your tools after each use, check for wear, and lubricate moving parts as specified in the tool's manual.
-
-## Additional Resources
-
-<LinkCard
-  title="In-depth Tutorials"
-  description="Deep dive into using our tools with expert-led tutorials."
-  href="/guides/getting-started"
-/>
-
-<LinkCard
-  title="Video Demos"
-  description="Visual guides to get the most out of your tools."
-  href="/guides/getting-started"
-/>
-
-<LinkCard
-  title="Warranty Information"
-  description="Understand your coverage and how to make a claim if needed."
-  href="/guides/getting-started"
-/>
+<Aside type="tip">RMA Ceneter Deira,Dubai United Arab Emirates</Aside>
