--- a/src/content/docs/guides/intro.mdx
+++ b/src/content/docs/guides/intro.mdx
@@ -1,31 +1,68 @@
 ---
-title: Introduction to ScrewFast Services
-description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services. 
+title: Support Videos
+description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services.
 sidebar:
-  label: Introduction to Services
-  order: 2
+  label: Trouble shoot videos
+  order: 3
 ---
 
-import {
-  Tabs,
-  TabItem,
-} from "@astrojs/starlight/components";
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
-As part of our commitment to providing an end-to-end solution for all your construction and hardware needs, we at ScrewFast are proud to offer a comprehensive suite of professional services. From initial consultations to final inspections, our multifaceted services encompass the entirety of your project, ensuring quality results and client satisfaction. This section of the documentation will guide you through everything you need to know to leverage our expertise to its fullest potential.
+Learn how to seamlessly integrate your UNV cameras with an NVR system. This video explains step-by-step how to connect, configure, and start recording with ease.
 
 ## Overview of Services
 
 <Tabs>
-  <TabItem label="Tailored Solutions">
-    Each construction project carries its unique challenges and demands. At ScrewFast, we customize our services to match your specific needs, ensuring that no matter the scale or complexity of your project, our team is equipped to handle it with precision and professionalism.
+  <TabItem label="Camera">
+    
+      <iframe
+        src="https://www.youtube.com/embed/kBO0pTVQ3nQ?si=VMR5tvxdFfOjdrut"
+        width="560"
+        height="560"
+        frameborder="0"
+        allowfullscreen
+      >
+      </iframe>
+  
   </TabItem>
-  <TabItem label="Expert Team">
-    Leverage the skills of our knowledgeable staff, from architects and engineers to skilled laborers, each contributing their expertise to bring your vision to life.
+
+  <TabItem label="Nvr">
+  <iframe
+    SRC="https://www.youtube.com/embed/s2fnrxEMMXc?si=lk1GPz2tCa8Ra0_6"
+    width="560"
+        height="560"
+        frameborder="0"
+        allowfullscreen
+    >
+    </iframe>
+     <iframe
+    SRC="https://www.youtube.com/embed/s2fnrxEMMXc?si=lk1GPz2tCa8Ra0_6"
+    width="560"
+        height="560"
+        frameborder="0"
+        allowfullscreen
+    >
+    </iframe>
   </TabItem>
-   <TabItem label="Commitment to Quality">
-    Quality is at the heart of everything we do. We employ stringent quality control measures to assure that the work we deliver meets and exceeds industry standards.
+  <TabItem label="Storage">
+  <iframe
+   src="https://www.youtube.com/embed/M7P0OFptErE?si=4ii2Y3poIn73Oman"
+   width="560"
+        height="560"
+        frameborder="0"
+        allowfullscreen
+        >
+        </iframe>
   </TabItem>
-   <TabItem label="Ongoing Support">
-    Our relationship with our clients doesn't end once the project is completed. We provide continuous support to address any issues and ensure lasting satisfaction with your investment.
+  <TabItem label="Video Intercorm">
+  <iframe
+   src="https://www.youtube.com/embed/o-LwnrkKThc?si=vBWQW1OFncaM03LX"
+   width="560"
+        height="560"
+        frameborder="0"
+        allowfullscreen
+        >
+        </iframe>
+   
   </TabItem>
 </Tabs>
