--- a/src/content/docs/support/safety.mdx
+++ b/src/content/docs/support/safety.mdx
@@ -1,31 +1,66 @@
 ---
-title: Safety Protocols and Procedures
+title: Camera Trouble shooting tips
 description: Explore ScrewFast's comprehensive documentation for an in-depth look at our premium tools and construction services.
 sidebar:
   label: Safety Protocols
   order: 3
 ---
 
-import { Card, CardGrid, LinkCard } from "@astrojs/starlight/components";
+import {
+  Card,
+  CardGrid,
+  LinkCard,
+  Steps,
+  Aside,
+} from "@astrojs/starlight/components";
 
 Safety is at the core of everything we do at ScrewFast. Our comprehensive safety protocols and procedures are designed to protect our team, clients, and the integrity of your project.
 
-<Card title="Key features of our safety commitment include:"></Card>
+<Card title="No Video Output"></Card>
+<li>1. Power supply issues.</li>
+<li>2. Loose or disconnected cables.</li>
+<li>3. Faulty camera.</li>
+<li>4. Defective monitor or DVR/NVR input port. </li>
+<Aside type="tip">
+  Steps to Fix:
+  <p>
+    Ensure the camera is receiving power by checking the LED indicator
+    (ifpresent)
+  </p>
+  <p>
+    1. Ensure the camera is receiving power by checking the LED indicator
+    (ifpresent).
+  </p>
+  <p>
+    2. Verify all connections, including the BNC/RJ45 cables and power cables.
+  </p>
+  <p>
+    3. Swap the camera with a working one to confirm if the issue lies with the
+    camera or the system.
+  </p>
+  <p> Check the DVR/NVR input port using a different working camera.</p>
+</Aside>
 
-<LinkCard
-  title="Rigorous safety training for all personnel"
-  href="/guides/getting-started"
-/>
+<Card title="Blurry or Out-of-Focus Image"></Card>
+<li>1. Dirty camera lens</li>
+<li>2. Improper focus settings.</li>
+<li>3. Low-resolution camera.</li>
 
-<CardGrid>
-  <LinkCard
-    title="Regular safety audits and compliance checks"
-    href="/guides/getting-started"
-  />
-  <LinkCard
-    title="Emergency response plans and drills"
-    href="/guides/getting-started"
-  />
-</CardGrid>
+<Aside type="tip">
+  Steps to Fix:
+  <p>Clean the camera lens with a microfiber cloth.</p>
+  <p>Adjust the focus and zoom settings if the camera has manual controls.</p>
+  <p>Verify the camera’s resolution settings in the DVR/NVR.</p>
+  <p>Upgrade to a higher-resolution camera if needed.</p>
+</Aside>
+<Card title="No Power to the Camera"></Card>
+<li>1. Faulty power supply or adapter</li>
+<li>2. Loose power connections.</li>
+<li>3. Damaged cables.</li>
+<Aside type="tip">
+  Steps to Fix:
+ <p>Test the power adapter with a multimeter or replace it with a working one.</p>
+<p>Inspect power connections and cables for damage or looseness.</p>
+<p>Ensure the power source (e.g., power outlet or PoE switch) is functional.</p>
 
-By integrating safety into our daily operations, we create a secure working environment without compromising on quality and productivity.
+</Aside>
