--- a/src/content/docs/guides/rma-submission.mdx
+++ b/src/content/docs/guides/rma-submission.mdx
@@ -37,15 +37,15 @@ If you are facing issues with your UNV (Uniview) camera, and it falls under the 
      - Al Khabaisi - Dubai - United Arab Emirates
      - Phone: +971 56 687 3364
   </Card>
-  <Card title="Step 5: RMA Evaluation">
+  <Card title="Step 4: RMA Evaluation">
    - Diagnosis: We will identify the issue with the camera.
    - Repair or Replacement: If the issue is covered under warranty, we will repair the camera or replace it with a new or refurbished unit (depending on the situation).
    - Time Frame: The evaluation process typically takes 5 days. We will inform you of the results and the next steps.
   </Card>
 </CardGrid>
 
-## Additional Resources
 
+{/* 
 <CardGrid>
   <LinkCard
     title="Detailed Guides"
@@ -62,7 +62,7 @@ If you are facing issues with your UNV (Uniview) camera, and it falls under the 
     description="Explore further educational resources provided by ScrewFast to refine your skills and knowledge base."
     href="/guides/getting-started"
   />
-</CardGrid>
+</CardGrid> */}
 <CardGrid>
 <iframe
   src="https://www.youtube.com/embed/kBO0pTVQ3nQ?si=VMR5tvxdFfOjdrut"
