--- a/src/content/uniview/content-1.mdx
+++ b/src/content/uniview/content-1.mdx
@@ -4,6 +4,10 @@ title: "IPC6424SR-X25-VF-B"
 desc: "4MP PTZ Camera with 25x Optical Zoom"
 img: "/src/assets/content/Prime/IPC6424SR-X25-VF-B.png"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
+author: "Mohammed Yonis"
+reviewBody: "best service and support"
+ratingValue: 5
+
 features:
    - "4MP, 1/2.8’’ CMOS sensor for high-quality images"
    - "2688×1520@30fps video resolution"
