--- a/src/content/uniview/content-12.mdx
+++ b/src/content/uniview/content-12.mdx
@@ -4,6 +4,9 @@ title: "IPC6824EL-X42-W-VH1"
 desc: "4MP 42X LightHunter Laser Network PTZ Camera"
 img: "/src/assets/content/Pro/IPC6824EL-X42-W-VH1.png"
 alt: "4MP 42X LightHunter Laser Network PTZ Camera"
+author: "Dipin koodali"
+reviewBody: "unv is the best product"
+ratingValue: 5
 features:
  - "2688×1520 @ 60fps high-resolution video"
  - "42X optical zoom for capturing fine details"
@@ -19,8 +22,8 @@ features:
  - "Power options: AC 24V ±25%, DC 24V ±25%, or PoE"
  - "7 alarm inputs, 2 alarm outputs, 1 audio input, 1 audio output"
  - "IP67 weatherproof protection"
-publishedTime: "2023-09-15"
-modifiedTime: "2023-10-01"
+publishedTime: "2025-01-15"
+modifiedTime: "2025-02-01"
 ---
 
 
