--- a/src/content/uniview/content-2.mdx
+++ b/src/content/uniview/content-2.mdx
@@ -4,6 +4,9 @@ title: "IPC6622SR-X33-VF"
 desc: "2MP 33X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6622SR-X33-VF.png"
 alt: "2MP 33X LightHunter IR Network PTZ Camera"
+author: "Raju Narayan"
+reviewBody: "Good"
+ratingValue: 4
 features:
    - "2MP, 1/2.8’’ CMOS sensor for high-quality images"
    - "1920×1080@60fps video resolution"
