--- a/src/content/uniview/content-3.mdx
+++ b/src/content/uniview/content-3.mdx
@@ -4,6 +4,9 @@ title: "IPC6658SR-X25-VF"
 desc: "8MP 25X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6658SR-X25-VF.png"
 alt: "8MP 25X LightHunter IR Network PTZ Camera"
+author: "Thomas Calrk"
+reviewBody: "Good Quality"
+ratingValue: 4
 features:
    - "8MP, 1/1.8’’ CMOS sensor for high-quality images"
    - "3840×2160@30fps video resolution"
