--- a/src/content/uniview/content-7.mdx
+++ b/src/content/uniview/content-7.mdx
@@ -4,6 +4,9 @@ title: "IPC6634S-X33-VF"
 desc: "4MP 33X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6634S-X33-VF.png"
 alt: "4MP 33X LightHunter IR Network PTZ Camera"
+author: "Rajeesh ponthen"
+reviewBody: "Product quality is good.Recomended"
+ratingValue: 4
 features:
  - "4MP, 1/2.8’’ CMOS sensor for high-quality images"
  - "2688×1520@30fps video resolution"
