--- a/src/content/uniview/content-8.mdx
+++ b/src/content/uniview/content-8.mdx
@@ -4,6 +4,9 @@ title: "IPC94144SR-X25-F40C"
 desc: "4MP+4MP 25X LightHunter MultiView IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC94144SR-X25-F40C.png"
 alt: "4MP+4MP 25X LightHunter MultiView IR Network PTZ Camera"
+author: "Geroge Thomas"
+reviewBody: "good"
+ratingValue: 3
 features:
  - "Dual-channel integration with fixed and PTZ cameras under one IP"
  - "4MP, 1/2.7’’ CMOS sensor for high-quality imaging"
