--- a/src/content/uniview/content-9.mdx
+++ b/src/content/uniview/content-9.mdx
@@ -4,6 +4,9 @@ title: "IPC6852ER-X45-VF"
 desc: "2MP 45X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Pro/IPC6852ER-X45-VF.png"
 alt: "2MP 45X LightHunter IR Network PTZ Camera"
+author: "Best security products in market"
+reviewBody: "best service and support"
+ratingValue: 5
 features:
  - "2MP, 1/1.8’’ CMOS sensor for high-quality imaging"
  - "1920×1080@30fps video resolution"
