--- a/src/content/uniview/content-10.mdx
+++ b/src/content/uniview/content-10.mdx
@@ -4,6 +4,9 @@ title: "IPC6652EL-X33-VF"
 desc: "2MP 33X LightHunter Laser Network PTZ Camera"
 img: "/src/assets/content/Pro/IPC6652EL-X33-VF.png"
 alt: "2MP 33X LightHunter Laser Network PTZ Camera"
+author: "Raghu"
+reviewBody: "product is good.Support not good"
+ratingValue: 3
 features:
  - "2MP, 1/2.8’’ CMOS sensor for high-quality imaging"
  - "1920×1080@60fps video resolution"
