--- a/src/content/uniview/content-11.mdx
+++ b/src/content/uniview/content-11.mdx
@@ -4,6 +4,9 @@ title: "IPC68188EFW-X25-F40G-VH"
 desc: "8MP 25X Dual-Spectrum MultiView Laser Network PTZ Camera"
 img: "/src/assets/content/Pro/IPC68188EFW-X25-F40G-VH.png"
 alt: "8MP 25X Dual-Spectrum MultiView Laser Network PTZ Camera"
+author: "Bhuvanesh sami"
+reviewBody: "Highly reccomanded.Good support"
+ratingValue: 5
 features:
  - "Dual-channel integration with a single IP for comprehensive monitoring"
  - "Supports dual-lens video splicing for a wider field of view"
