--- a/src/content/uniview/content-4.mdx
+++ b/src/content/uniview/content-4.mdx
@@ -4,6 +4,9 @@ title: "IPC6624SR-X33-VF"
 desc: "4MP 33X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6624SR-X33-VF.png"
 alt: "4MP 33X LightHunter IR Network PTZ Camera"
+author: "Gaffor"
+reviewBody: "Reasonable rate and good support"
+ratingValue: 5
 features:
    - "4MP, 1/2.8’’ CMOS sensor for high-quality images"
    - "2688×1520@30fps video resolution"
