--- a/src/content/uniview/content-5.mdx
+++ b/src/content/uniview/content-5.mdx
@@ -4,6 +4,9 @@ title: "IPC6612SR-X25-VG"
 desc: "2MP 25X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6612SR-X25-VG.png"
 alt: "2MP 25X LightHunter IR Network PTZ Camera"
+author: "Zameel Mohammed"
+reviewBody: "Good quality products"
+ratingValue: 4
 features:
    - "2MP, 1/2.8’’ CMOS sensor for high-quality images"
    - "1920×1080@30fps video resolution"
