--- a/src/content/uniview/content-6.mdx
+++ b/src/content/uniview/content-6.mdx
@@ -4,6 +4,9 @@ title: "IPC6424SR-X25-VF"
 desc: "4MP 25X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6424SR-X25-VF.png"
 alt: "4MP 25X LightHunter IR Network PTZ Camera"
+author: "Anandu Kumar"
+reviewBody: "Good service and qualified technicians"
+ratingValue: 5
 features:
  - "4MP, 1/2.8’’ CMOS sensor for high-quality images"
  - "2688×1520@30fps video resolution"
