--- a/src/content/uniview/content-10.mdx
+++ b/src/content/uniview/content-10.mdx
@@ -3,6 +3,10 @@ id: 10
 title: "IPC6652EL-X33-VF"
 desc: "2MP 33X LightHunter Laser Network PTZ Camera"
 img: "/src/assets/content/Pro/IPC6652EL-X33-VF.png"
+images:
+  - "/src/assets/camera/Pro/IPC6652EL-X33-VF/IPC6652EL-X33-VF-3.png"
+  - "/src/assets/camera/Pro/IPC6652EL-X33-VF/IPC6652EL-X33-VF-2.png"
+  - "/src/assets/camera/Pro/IPC6652EL-X33-VF/IPC6652EL-X33-VF-1.png"
 alt: "2MP 33X LightHunter Laser Network PTZ Camera"
 author: "Raghu"
 reviewBody: "product is good.Support not good"
