--- a/src/content/uniview/content-12.mdx
+++ b/src/content/uniview/content-12.mdx
@@ -3,6 +3,10 @@ id: 12
 title: "IPC6824EL-X42-W-VH1"
 desc: "4MP 42X LightHunter Laser Network PTZ Camera"
 img: "/src/assets/content/Pro/IPC6824EL-X42-W-VH1.png"
+images:
+  - "/src/assets/camera/Pro/IPC6824EL-X42-W-VH1/IPC6824EL-X42-W-VH1-3.png"
+  - "/src/assets/camera/Pro/IPC6824EL-X42-W-VH1/IPC6824EL-X42-W-VH1-2.png"
+  - "/src/assets/camera/Pro/IPC6824EL-X42-W-VH1/IPC6824EL-X42-W-VH1-1.png"
 alt: "4MP 42X LightHunter Laser Network PTZ Camera"
 author: "Dipin koodali"
 reviewBody: "unv is the best product"
