--- a/src/content/uniview/content-6.mdx
+++ b/src/content/uniview/content-6.mdx
@@ -3,6 +3,10 @@ id: 6
 title: "IPC6424SR-X25-VF"
 desc: "4MP 25X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6424SR-X25-VF.png"
+images:
+  - "/src/assets/camera/Prime/IPC6424SR-X25-VF/IPC6424SR-X25-VF-3.png"
+  - "/src/assets/camera/Prime/IPC6424SR-X25-VF/IPC6424SR-X25-VF-2.png"
+  - "/src/assets/camera/Prime/IPC6424SR-X25-VF/IPC6424SR-X25-VF-1.png"
 alt: "4MP 25X LightHunter IR Network PTZ Camera"
 author: "Anandu Kumar"
 reviewBody: "Good service and qualified technicians"
