--- a/src/content/uniview/content-8.mdx
+++ b/src/content/uniview/content-8.mdx
@@ -3,6 +3,11 @@ id: 8
 title: "IPC94144SR-X25-F40C"
 desc: "4MP+4MP 25X LightHunter MultiView IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC94144SR-X25-F40C.png"
+images:
+  - "/src/assets/camera/Prime/IPC94144SR-X25-F40C/IPC94144SR-X25-F40C-4.png"
+  - "/src/assets/camera/Prime/IPC94144SR-X25-F40C/IPC94144SR-X25-F40C-3.png"
+  - "/src/assets/camera/Prime/IPC94144SR-X25-F40C/IPC94144SR-X25-F40C-2.png"
+  - "/src/assets/camera/Prime/IPC94144SR-X25-F40C/IPC94144SR-X25-F40C-1.png"
 alt: "4MP+4MP 25X LightHunter MultiView IR Network PTZ Camera"
 author: "Geroge Thomas"
 reviewBody: "good"
