--- a/src/content/uniview/content-9.mdx
+++ b/src/content/uniview/content-9.mdx
@@ -3,6 +3,10 @@ id: 9
 title: "IPC6852ER-X45-VF"
 desc: "2MP 45X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Pro/IPC6852ER-X45-VF.png"
+images:
+    - "/src/assets/camera/Pro/IPC6852ER-X45-VF/IPC6852ER-X45-VF-3.png"
+    - "/src/assets/camera/Pro/IPC6852ER-X45-VF/IPC6852ER-X45-VF-2.png"
+    - "/src/assets/camera/Pro/IPC6852ER-X45-VF/IPC6852ER-X45-VF-1.png"
 alt: "2MP 45X LightHunter IR Network PTZ Camera"
 author: "Best security products in market"
 reviewBody: "best service and support"
