--- a/src/content/uniview/content-1.mdx
+++ b/src/content/uniview/content-1.mdx
@@ -3,6 +3,10 @@ id: 1
 title: "IPC6424SR-X25-VF-B"
 desc: "4MP PTZ Camera with 25x Optical Zoom"
 img: "/src/assets/content/Prime/IPC6424SR-X25-VF-B.png"
+images:
+  - "/src/assets/camera/Prime/IPC6424SR-X25-VF-B/IPC6424SR-X25-VF-B-3.png"
+  - "/src/assets/camera/Prime/IPC6424SR-X25-VF-B/IPC6424SR-X25-VF-B-2.png"
+  - "/src/assets/camera/Prime/IPC6424SR-X25-VF-B/IPC6424SR-X25-VF-B-1.png"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
 author: "Mohammed Yonis"
 reviewBody: "best service and support"
