--- a/src/content/uniview/content-7.mdx
+++ b/src/content/uniview/content-7.mdx
@@ -3,6 +3,10 @@ id: 7
 title: "IPC6634S-X33-VF"
 desc: "4MP 33X LightHunter IR Network PTZ Camera"
 img: "/src/assets/content/Prime/IPC6634S-X33-VF.png"
+images:
+  - "/src/assets/camera/Prime/IPC6634S-X33-VF/IPC6634S-X33-VF-3.png"
+  - "/src/assets/camera/Prime/IPC6634S-X33-VF/IPC6634S-X33-VF-2.png"
+  - "/src/assets/camera/Prime/IPC6634S-X33-VF/IPC6634S-X33-VF-1.png"
 alt: "4MP 33X LightHunter IR Network PTZ Camera"
 author: "Rajeesh ponthen"
 reviewBody: "Product quality is good.Recomended"
