--- a/src/content/lovosis/imou-4.mdx
+++ b/src/content/lovosis/imou-4.mdx
@@ -8,18 +8,18 @@ author: "Mohammed Yonis"
 reviewBody: "best service and support"
 ratingValue: 5
 features:
-   - "4MP, 1/2.8’’ CMOS sensor for high-quality images"
-   - "2688×1520@30fps video resolution"
-   - "Ultra 265, H.265, H.264, MJPEG support"
-   - "25X optical zoom for clear details"
-   - "Smart intrusion detection with false alarm filtering"
-   - "People counting and crowd density monitoring"
-   - "LightHunter technology for excellent low-light performance"
-   - "Smart IR with up to 100m (328ft) night vision"
-   - "Power options: DC 12V±25% or PoE+ (IEEE 802.3at)"
-   - "2 alarm inputs, 1 alarm output, 1 audio input, 1 audio output"
-   - "IP67 waterproof and dustproof rating"
-   - "IK10 vandal-resistant design"
+   - "1/3” Progressive CMOS"
+   - "5MP(2688 x 1664)"
+   - "Night Vision: 10m(33ft) Distance"
+   - "3.6mm Fixed Len"
+   - "Field of View : 87°(H), 48°(V), 108°(D)"
+   - "355°Pan & -5~80°Tilt"
+   - "Video Compression : H.265/H.264"
+   - "Up to 25/30fps Frame Rate"
+   - "8 x Digital Zoom"
+   - "Two-way Audio"
+   - "Motion Detection"
+   - "Human Detection"
 publishedTime: "2023-09-15"
 modifiedTime: "2023-10-01"
 ---
