--- a/src/content/lovosis/imou-3.mdx
+++ b/src/content/lovosis/imou-3.mdx
@@ -8,18 +8,18 @@ author: "Mohammed Yonis"
 reviewBody: "best service and support"
 ratingValue: 5
 features:
-   - "4MP, 1/2.8’’ CMOS sensor for high-quality images"
-   - "2688×1520@30fps video resolution"
-   - "Ultra 265, H.265, H.264, MJPEG support"
-   - "25X optical zoom for clear details"
-   - "Smart intrusion detection with false alarm filtering"
-   - "People counting and crowd density monitoring"
-   - "LightHunter technology for excellent low-light performance"
-   - "Smart IR with up to 100m (328ft) night vision"
-   - "Power options: DC 12V±25% or PoE+ (IEEE 802.3at)"
-   - "2 alarm inputs, 1 alarm output, 1 audio input, 1 audio output"
-   - "IP67 waterproof and dustproof rating"
-   - "IK10 vandal-resistant design"
+   - "1/3”5 Megapixel Progressive CMOS"
+   - "5 MP(2880*1620)"
+   - "Night Vision: 30m(98ft) Distance"
+   - "3.6 mm Fixed Lens"
+   - "Field of View:73°(H), 40°(V), 89°(D)"
+   - "355°Pan & 0~90°Tilt"
+   - "4 fill-in lights (each fill-in light supports emitting infrared and white light)"
+   - "2 Red-Blue Warning Lights"
+   - "Video Compression : H.265/H.264"
+   - "Up to 20 fps Frame Rate"
+   - "8x Digital Zoom"
+   - "Built-in Mic & Speaker, 110dB Siren"
 publishedTime: "2023-09-15"
 modifiedTime: "2023-10-01"
 ---
