--- a/src/content/lovosis/imou-6.mdx
+++ b/src/content/lovosis/imou-6.mdx
@@ -8,18 +8,18 @@ author: "Mohammed Yonis"
 reviewBody: "best service and support"
 ratingValue: 5
 features:
-   - "4MP, 1/2.8’’ CMOS sensor for high-quality images"
-   - "2688×1520@30fps video resolution"
-   - "Ultra 265, H.265, H.264, MJPEG support"
-   - "25X optical zoom for clear details"
-   - "Smart intrusion detection with false alarm filtering"
-   - "People counting and crowd density monitoring"
-   - "LightHunter technology for excellent low-light performance"
-   - "Smart IR with up to 100m (328ft) night vision"
-   - "Power options: DC 12V±25% or PoE+ (IEEE 802.3at)"
-   - "2 alarm inputs, 1 alarm output, 1 audio input, 1 audio output"
-   - "IP67 waterproof and dustproof rating"
-   - "IK10 vandal-resistant design"
+   - "1/2.7”4 Megapixel Progressive CMOS"
+   - "4MP(2560x 1440)"
+   - "Night Vision: 30m(98ft) Distance"
+   - "3.6mm/6mm Fixed Lens"
+   - "Field of View:6mm: 54°(H), 30°(V), 64°(D)3.6mm: 88°(H), 46°(V), 107°(D"
+   - "355°Pan & 0~90°Til"
+   - "Video Compression : H.265/H.264"
+   - "Up to 25/30 fps Frame Rate"
+   - "8 x Digital Zoom"
+   - "Built-in Mic & Speaker, 110dB Siren"
+   - "Two-way Audio"
+   - "Motion Detection"
 publishedTime: "2023-09-15"
 modifiedTime: "2023-10-01"
 ---
