--- a/src/content/lovosis/imou-2.mdx
+++ b/src/content/lovosis/imou-2.mdx
@@ -1,6 +1,7 @@
 ---
 id: 2
 title: "Cruiser Dual 2 Pro"
+slug: Cruiser Dual 2 Pro
 desc: "4+4MP Camera | Blue & Red Warning Light Aurora Low-light Imaging Technology Wide View Dual Lens  | IMOU Algorithm Mart: Algo Play"
 img: "/src/assets/content/imou/imou2.webp"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
