--- a/src/content/lovosis/imou-5.mdx
+++ b/src/content/lovosis/imou-5.mdx
@@ -1,6 +1,7 @@
 ---
 id: 5
 title: "Bullet 3 3MP/5MP"
+slug: Bullet 3 3MP/5MP
 desc: "5MP 3K Image | Supports Wi-Fi 6 Connection Smart Full-color Night Vision | Al Human & Vehicle Detection"
 img: "/src/assets/content/imou/imou5.webp"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
