--- a/src/content/lovosis/imou-1.mdx
+++ b/src/content/lovosis/imou-1.mdx
@@ -1,6 +1,7 @@
 ---
 id: 1
 title: "Cruiser2 3MP/5MP"
+slug: Cruiser2 3MP/5MP
 desc: "3K QHD Image | Smart Full-color Night Vision | Panoramic Pan & Tilt | Powered by IMOU SENSE™ | Smart Tracking | IP66 Weather-resistance"
 img: "/src/assets/content/imou/imou1.webp"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
