--- a/src/content/lovosis/imou-3.mdx
+++ b/src/content/lovosis/imou-3.mdx
@@ -1,6 +1,7 @@
 ---
 id: 3
 title: "Cruiser SC 4G"
+slug: Cruiser SC 4G
 desc: "3K UHD Image | Blue & Red Warning Light Smart Full-color Night Vision | Supports 4G Connection"
 img: "/src/assets/content/imou/imou3.webp"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
