--- a/src/content/lovosis/imou-4.mdx
+++ b/src/content/lovosis/imou-4.mdx
@@ -1,6 +1,7 @@
 ---
 id: 4
 title: "Ranger 2 5MP"
+slug: Ranger 2 5MP
 desc: "Pan & Tilt for 360° Coverage | Human Detection | Smart Tracking | Night Vision | Privacy Mode"
 img: "/src/assets/content/imou/imou4.webp"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
