--- a/src/content/lovosis/imou-7.mdx
+++ b/src/content/lovosis/imou-7.mdx
@@ -1,6 +1,7 @@
 ---
 id: 2
 title: "Versa"
+slug: Versa
 desc: "Easy to Mount | Smart Color Night Vison
 IP65 Weather-resistance | Built-in Spotlight | 110dB Siren"
 img: "/src/assets/content/imou/imou7.webp"
