--- a/src/content/lovosis/imou-8.mdx
+++ b/src/content/lovosis/imou-8.mdx
@@ -1,6 +1,7 @@
 ---
 id: 2
 title: "DK2 4MP"
+slug: DK2 4MP
 desc: "2.5K QHD Image | Remotely Pan & Tilt | Human Detection Abnormal Sound Alarm | Physical Privacy Shield"
 img: "/src/assets/content/imou/imou8.webp"
 alt: "4MP PTZ Camera with 25x Optical Zoom"
